<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iCivil移动端</string>
    <string name="welcome">Welcome</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Setting</string>
    <string name="login_label_username">账户</string>
    <string name="login_username_hint">账号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登录</string>
    <string name="icivil">icivil</string>
    <string name="title_activity_activity_home">ActivityHome</string>
    <string name="remember_password">记住密码</string>
    <string name="sign_up">Sign Up</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载 ...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">刷新</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="refresh_blue_device">以下设备可用，请下拉重新搜索</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="title_activity_activity_debug">ActivityDebug</string>
    <string name="title_activity_start">iCivil手机端</string>
    <string name="fragment_data">数据</string>
    <string name="fragment_rawcode">原始代码</string>
    <string name="fragment_statitics">原始代码</string>
    <string name="fragment_autotest">设备自检</string>
    <string name="fragment_parameters">设备参数</string>
    <string name="title_login">登录</string>
    <string name="title_search">搜索设备</string>
    <string name="title_debug">调试</string>
    <string name="title_setting">配置</string>
    <string name="action_start_device">设备</string>
    <string name="action_start_configure">配置</string>
    <string name="action_start_web">网站</string>
    <string name="title_activity_activity_check_system">iCivil工程助理</string>
    <string name="blueVersion">蓝牙版本</string>
    <string name="blueName">蓝牙名称</string>
    <string name="hingBlueDeiceError">提示：本软件需要蓝牙4.0以上</string>
    <string name="enter">进入</string>
    <string name="ble_not_supported">不支持蓝牙4.0</string>
    <string name="ble_supported">支持蓝牙4.0</string>
    <string name="textTitleBluetoothName">蓝牙设备：</string>
    <string name="title_activity_activity_switch">ActivitySwitch</string>
    <string name="hintInputCodes">请输入指令</string>
    <string name="btCaptionSend">发送</string>
    <string name="title_activity_activity_parameters">ActivityParameters</string>
    <string name="listItemMoreAction"></string>
    <string name="action_reload_parameters">刷新参数</string>
    <string name="refresh">刷新</string>
    <string name="title_activity_activity_device_debug">iCivil工程助手</string>
    <string name="device_debug_station">基站号</string>
    <string name="device_debug_save">确定</string>
    <string name="device_debug_remain_seconds"></string>
    <string name="tv_passed_secnods">时间过去了</string>
    <string name="device_debug_sencond">秒</string>
    <string name="device_debug_sencond_00">00</string>
    <string name="tv_config_uri">服务器URI</string>
    <string name="tv_config_station">基站号</string>
    <string name="title_activity_activity_init">ActivityInit</string>
    <string name="title_activity_login">ICivil应用宝</string>
    <string name="title_activity_activity_alfa">ActivityAlfa</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="fragment_home_text">首页</string>
    <string name="fragment_settings_text">设置</string>
    <string name="fragment_search_text">搜索</string>
    <string name="fragment_alfa_debug_search_text">搜索</string>
    <string name="fragment_alfa_debug_command_text">搜索</string>
    <string name="fragment_alfa_home_text">首页</string>
    <string name="fragment_alfa_local_text">本地</string>
    <string name="fragment_alfa_remote_text">对象</string>
    <string name="fragment_alfa_myhome_text">我的</string>
    <string name="title_alfa_home_text">首页</string>
    <string name="title_alfa_local_text">本地</string>
    <string name="title_alfa_remote_text">对象</string>
    <string name="title_alfa_debug_text">调试</string>
    <string name="title_alfa_device_text">设备</string>
    <string name="title_alfa_myhome_text">我的</string>
    <string name="alfa_button_text_remote">数据</string>
    <string name="alfa_button_text_device">设备</string>
    <string name="alfa_button_text_setting">设置</string>
    <string name="alfa_button_text_debug">调试</string>
    <string name="alfa_button_text_warn">警报</string>
    <string name="alfa_button_text_myinfo">我的</string>
    <string name="alfa_button_text_local">设备</string>
    <string name="menu_settings">Settings</string>
    <string name="tab_home">"首页"</string>
    <string name="tab_search">"搜索"</string>
    <string name="tab_settings">"设置"</string>
    <string name="alfa_tab_home">首页</string>
    <string name="alfa_tab_local">本地</string>
    <string name="alfa_tab_device">设备</string>
    <string name="alfa_tab_remote">对象</string>
    <string name="alfa_tab_debug">调试</string>
    <string name="alfa_tab_myhome">我的</string>
    <string name="title_home">"首页"</string>
    <string name="title_settings">"设置"</string>
    <string name="back">"返回"</string>
    <string name="help">"帮助"</string>
    <string name="exit">"退出"</string>
    <string name="title_activity_alfa_top">ActivityAlfaTop</string>
    <string name="text_fragment_alfa_left_data">数据</string>
    <string name="text_fragment_alfa_right_data">数据</string>
    <string name="text_fragment_alfa_debug_search">搜索</string>
    <string name="text_fragment_alfa_debug_command">指令</string>
    <string name="hint_login_user">请输入账号</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="desc_login">登录</string>
    <string name="title_activity_activity_torch">手电筒</string>
    <string name="title_activity_gps">定位</string>
    <string name="btnmanual">手动获取位置</string>
    <string name="btnsettimespace">设置时间间隔</string>
    <string name="btnexit">关闭</string>
    <string name="ettimespacehint">秒</string>
    <string name="title_alfa_debug_search_text">蓝牙</string>
    <string name="title_alfa_debug_command_text">指令</string>
    <string name="title_activity_activity_inclinometer">Inclinometer</string>
    <string name="title_activity_activity__refresh">Activity_Refresh</string>
    
    <string name="unit_angle_degree">degree(°)</string>
    <string name="init_angle_degree">0.000</string>
    <string name="angle_name_x">X</string>
    <string name="angle_name_y">Y</string>
    
    <string name="unit_volt_v">vlot(v)</string>
    <string name="init_volt_zero">0.000</string>
    <string name="angle_name_volt">volt</string>
    
    <string name="unit_temp_degree">degree(℃)</string>
    <string name="init_temp_zero">0.000</string>
    <string name="angle_name_temp">temp</string>
    
    
    <string name="hint_incli_start">START</string>
    <string name="hint_incli_stop">STOP</string>
    <string name="hint_incli_calibrate">CALIBRATE</string>
    <string name="hint_incli_poweroff">POWEROFF</string>
    <string name="hint_incli_scan_bluetooth">SCAN</string>
    <string name="hint_incli_connect_bluetooth">CONNECT</string>
    <string name="hint_incli_connect_state">STATE</string>
    
    <string name="record_save_dialog_title">Please input password</string>
    <string name="record_save_dialog_cancel">Cancel</string>
    <string name="record_save_dialog_ok">OK</string>

</resources>
