<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.novery.activity.ActivityDeviceDebug$PlaceholderFragment" >

<ListView 
        android:id="@+id/lv_device_debug"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@drawable/list_line"
        android:dividerHeight="1dip"
        android:layout_marginTop="50dp"
         />

<TextView
    android:id="@+id/tv_station"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/lv_device_debug"
    android:layout_alignParentTop="true"
    android:layout_marginTop="16dp"
    android:text="@string/device_debug_station" />

<EditText
    android:id="@+id/et_station"
    android:layout_width="50dp"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/tv_station"
    android:layout_alignBottom="@+id/tv_station"
    android:layout_toRightOf="@+id/tv_station"
    android:ems="10" >

    <requestFocus />
</EditText>

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/tv_station"
    android:layout_alignParentRight="true"
    android:text="@string/device_debug_sencond" />

<TextView
    android:id="@+id/tv_remain_seconds"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/textView1"
    android:layout_alignBottom="@+id/textView1"
    android:layout_toLeftOf="@+id/textView1"
    android:text="@string/device_debug_sencond_00" />

<ImageView
    android:id="@+id/imageView1"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:layout_alignBottom="@+id/et_station"
    android:layout_marginRight="29dp"
    android:layout_toLeftOf="@+id/tv_remain_seconds"
    android:src="@drawable/sandclass" />

</RelativeLayout>
